correct name App

--- a/yanncauchepin_lendingclub.ipynb
+++ b/yanncauchepin_lendingclub.ipynb
@@ -1556,7 +1556,7 @@
    "id": "db1f6e7c",
    "metadata": {},
    "source": [
-    "# Application\n",
+    "# App\n",
     "\n",
     "The docker image of the application is located [here](https://hub.docker.com/repository/docker/yanncauchepin/lendingclub/general).\n",
     "\n",
