correct name app

--- a/yanncauchepin_lendingclub.ipynb
+++ b/yanncauchepin_lendingclub.ipynb
@@ -1558,7 +1558,7 @@
    "source": [
     "# App\n",
     "\n",
-    "The docker image of the application is located [here](https://hub.docker.com/repository/docker/yanncauchepin/lendingclub/general).\n",
+    "The docker image of the app is located [here](https://hub.docker.com/repository/docker/yanncauchepin/lendingclub/general).\n",
     "\n",
     "I realized that I have not handle the case where one of the feature filled to describe the data is NaN. I would probably code a inner function of the model to process an imputation with a more advanced method than just setting the mean value of the feature.\n",
     "\n",
